Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13100

Several file components with objects on same OST causes a deadlock while obtaining grants

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • 3
    • 9223372036854775807

      osc_io_commit_async() leaves last extent in active state, so it can't be sent to a OST to obtain grants for pages from the other component but on the same OST.

            askulysh Andriy Skulysh
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: